[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gxhash = "3.5.0"
memchr = "2.7.6"
memmap2 = "0.9.9"
rayon = "1.11.0"

[profile.release]
debug = true

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
